BUG: 171391

Fix the wrong file count in file properties dialog


svn path=/trunk/KDE/kdelibs/; revision=946754